# MasterThesis

./: .gitignore  .gitmodules  Dockerfile  MasterThesis.sln  README.md  build_docker.sh
MasterThesis/: MasterThesis.pyproj  manage.py  pyproject.toml  requirements.txt  run_docker.sh
MasterThesis/MasterThesis/: __init__.py  settings.py  urls.py  wsgi.py
MasterThesis/app/: configs.py  forms.py  graph.py  test_views.py  views.py
MasterThesis/app/static/app/content/: main.css
MasterThesis/app/templates/app/: about.html  app.html  contact.html  index.html  layout.html  result.html  validation.html
MasterThesis/app/templatetags/: custom_filters.py
